--- a/vars/manila-controller.yml
+++ b/vars/manila-controller.yml
@@ -17,9 +17,9 @@ devstack:
   # OS image to use
   image: Ubuntu-16.04
 
-  services: controller
+  services: 'manila-controller'
 
   admin_password: admin
 
 # ssh key to put on the server
-key_name: abathur
+key_name: raynor
